<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        app:cardUseCompatPadding="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="110dp"
                android:src="@drawable/ka3ba_img"
                android:scaleType="fitXY"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/iv_news_cover"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                tools:text="@string/beta_news"
                android:layout_toLeftOf="@id/iv_news_cover"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:id="@+id/tv_news_title"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_news_title"
                android:layout_toLeftOf="@id/iv_news_cover"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                tools:text="@string/beta_news_description"
                android:id="@+id/tv_news_description"
                />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                tools:text="@string/beta_news_date"
                android:id="@+id/tv_news_date"
                />

        </RelativeLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>