<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_user_guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/stroke"
                android:onClick="navToScreen"
                android:orientation="vertical"
                android:padding="10dp"
               >

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="48dp"
                    android:tint="@color/white"
                    android:id="@+id/iv_user_guide"
                    />

                <TextView
                    style="@style/TvStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/user_guide"

                    />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_request_chair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/stroke"
                android:onClick="navToScreen"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                android:padding="10dp"
                >

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="48dp"
                    android:tint="@color/white"
                    android:id="@+id/iv_request_chair"
                    />

                <TextView
                    style="@style/TvStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/request_chair" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_request_fatwa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/stroke"
                android:onClick="navToScreen"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="48dp"
                    android:id="@+id/iv_request_fatawa"
                    />

                <TextView
                    style="@style/TvStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/request_fatwa"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_hagg_daye3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/stroke"
                android:onClick="navToScreen"
                android:orientation="vertical"
                android:layout_marginRight="20dp"
                android:padding="10dp"
                >
                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="48dp"
                    android:tint="@color/white"
                    android:id="@+id/iv_hagg_daye3"
                    />

                <TextView
                    style="@style/TvStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/hagg_daye3"

                    />

            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_contact_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/stroke"
            android:onClick="navToScreen"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="96dp"
                android:layout_height="48dp"
                android:id="@+id/iv_contact_us"
                android:tint="@color/white"
                />

            <TextView
                style="@style/TvStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/contact_us"
                />

        </LinearLayout>


    </LinearLayout>




</LinearLayout>


