<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <FrameLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="175dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:src="@drawable/splash_bg"
            android:scaleType="centerCrop"
            android:id="@+id/background"
            />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="14dp"
                android:layout_marginTop="16dp"
                android:scaleType="fitXY"
                android:src="@drawable/logo_icon"
                android:layout_marginBottom="10dp"/>


            <View
                android:id="@+id/top_bar"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/iv_logo"
                android:layout_centerHorizontal="true"
                android:background="@color/white"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/top_bar"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/about_us"
                android:textColor="@color/white"
                android:id="@+id/tv_about_us"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textSize="17sp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tv_about_us"
                android:background="@color/white"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                />


        </RelativeLayout>

    </FrameLayout>

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:cardBackgroundColor="@color/colorPrimary"
        android:id="@+id/cv_website"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="1dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_www"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:tint="@color/white"
                    android:id="@+id/ic_www"
                    android:layout_marginStart="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/ic_www"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    />
            </android.support.constraint.ConstraintLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="1dp"
                    android:padding="5dp"
                    android:src="@drawable/contact_icon"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:tint="@color/white"
                    android:id="@+id/ic_phone"
                    android:layout_marginStart="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    tools:layout_editor_absoluteY="208dp"
                    tools:layout_editor_absoluteX="8dp">
                    <TextView
                        android:id="@+id/call_no1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="+966125755551"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/ic_phone"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>




    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cv_website"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:cardUseCompatPadding="true"
        android:id="@+id/cv_description"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_description"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />


    </android.support.v7.widget.CardView>


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:context="com.khaled.hegg.activity.AboutUsActivity"
        app:layout_constraintTop_toBottomOf="@+id/cv_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>
